<resources>
    <string name="app_name">My Application</string>
    <string name="recien_anadidos">Recien añadidos</string>
    <string name="detergente">Detergente líquido concentrado para lavar ropa blanca y de color</string>
    <string name="descripcion_detergente1">Con Ariel Líquido Concentrado tienes un mismo detergente que lava blancos y colores con resultados impecables, sin maltratar las fibras y cuidando los colores.</string>
    <string name="Categorias">category</string>
    <string name="category">Categorias</string>
    <string name="despensa">Despensa</string>
    <string name="homecare">Cuidado del hogar</string>
    <string name="personalclean">Aseo personal</string>
    <string name="drinks">Bebidas</string>
    <string name="pet">Mascotas</string>
    <string name="babys">Bebes</string>
    <string name="offerstx">Promociones</string>
    <string name="login">Iniciar Sesión</string>
    <string name="subtxtlogin">Por favor ingresa tus credenciales para continuar.</string>
    <string name="sugerencia">Todavía no tienes cuenta? Registrate</string>
    <string name="formcreateaccount">Crear cuenta</string>
    <string name="sugerx2tx">Por favor ingresa tus datos para continuar.</string>
    <string name="createaccountnewtx">Crear cuenta nueva</string>
    <string name="sugerx3">Ya tienes cuenta? Inicia sesión</string>
    <string name="nameuser">Nombre completo</string>
    <string name="identify">Identifición</string>
    <string name="emailetx">Correo</string>
    <string name="passwordetx">Contraseña</string>
    <string name="confirmpasswordetx">Confirmar contraseña</string>
</resources>