<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity2">

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="52dp"
        android:layout_height="50dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="665dp"
        tools:srcCompat="@drawable/icon_home" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="52dp"
        android:layout_height="50dp"
        tools:layout_editor_absoluteX="126dp"
        tools:layout_editor_absoluteY="665dp"
        tools:srcCompat="@drawable/archivo_de_busqueda_1" />

    <ImageButton
        android:id="@+id/imageButton10"
        android:layout_width="52dp"
        android:layout_height="50dp"
        tools:layout_editor_absoluteX="236dp"
        tools:layout_editor_absoluteY="665dp"
        tools:srcCompat="@drawable/icon_offers" />

    <ImageButton
        android:id="@+id/imageButton11"
        android:layout_width="52dp"
        android:layout_height="50dp"
        tools:layout_editor_absoluteX="340dp"
        tools:layout_editor_absoluteY="665dp"
        tools:srcCompat="@drawable/icon_user" />

    <Button
        android:id="@+id/button5"
        android:layout_width="165dp"
        android:layout_height="48dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="26dp"
        android:text="@string/pet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button3"
        android:layout_width="165dp"
        android:layout_height="48dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="26dp"
        android:text="@string/personalclean"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="225dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/smartaisle" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:text="@string/category"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        tools:layout_editor_absoluteX="22dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="165dp"
        android:layout_height="48dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="22dp"
        android:text="@string/despensa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button2"
        android:layout_width="165dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:text="@string/homecare"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="248dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="165dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/drinks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button6"
        android:layout_width="165dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:text="@string/babys"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />
</android.support.constraint.ConstraintLayout>