<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile_LoginActivity2">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/smartaisle" />

    <ImageButton
        android:id="@+id/imageButton12"
        android:layout_width="52dp"
        android:layout_height="50dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="665dp"
        tools:srcCompat="@drawable/icon_home" />

    <ImageButton
        android:id="@+id/imageButton13"
        android:layout_width="52dp"
        android:layout_height="50dp"
        tools:layout_editor_absoluteX="126dp"
        tools:layout_editor_absoluteY="665dp"
        tools:srcCompat="@drawable/archivo_de_busqueda_1" />

    <ImageButton
        android:id="@+id/imageButton14"
        android:layout_width="52dp"
        android:layout_height="50dp"
        tools:layout_editor_absoluteX="236dp"
        tools:layout_editor_absoluteY="665dp"
        tools:srcCompat="@drawable/icon_offers" />

    <ImageButton
        android:id="@+id/imageButton15"
        android:layout_width="52dp"
        android:layout_height="50dp"
        tools:layout_editor_absoluteX="340dp"
        tools:layout_editor_absoluteY="665dp"
        tools:srcCompat="@drawable/icon_user" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="32dp"
        android:text="@string/login"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:text="@string/subtxtlogin"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="179dp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="220dp" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="291dp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="358dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sugerencia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="432dp" />
</android.support.constraint.ConstraintLayout>