<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="52dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="665dp"
        tools:srcCompat="@drawable/icon_user" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="52dp"
        android:layout_height="50dp"
        android:layout_marginEnd="52dp"
        app:layout_constraintEnd_toStartOf="@+id/imageButton4"
        tools:layout_editor_absoluteY="665dp"
        tools:srcCompat="@drawable/icon_offers" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        tools:srcCompat="@drawable/pedigree_logo" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="39dp"
        app:layout_constraintEnd_toStartOf="@+id/imageButton8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        tools:srcCompat="@drawable/cocacola_logo_modified" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toStartOf="@+id/imageButton6"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        tools:srcCompat="@drawable/ariel_logo_modified" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="225dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/smartaisle" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="292dp"
        android:text="@string/recien_anadidos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton7" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="122dp"
        android:layout_height="178dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@mipmap/detergente1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="237dp"
        android:layout_height="68dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="19dp"
        android:text="@string/detergente"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="243dp"
        android:layout_height="89dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="13dp"
        android:text="@string/descripcion_detergente1"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="52dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="58dp"
        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="665dp"
        tools:srcCompat="@drawable/icon_home" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="52dp"
        android:layout_height="50dp"
        android:layout_marginEnd="58dp"
        app:layout_constraintEnd_toStartOf="@+id/imageButton3"
        tools:layout_editor_absoluteY="665dp"
        tools:srcCompat="@drawable/archivo_de_busqueda_1" />

</android.support.constraint.ConstraintLayout>